Client Detail table update

--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -46,11 +46,11 @@
 <h1>Create a New Account</h1>
 
 <form action="/api/env-id-details" method="post">
-    <label for="projectName">Project Name:</label>
-    <input type="text" id="projectName" name="projectName" required>
+    <label for="clientName">Client Name:</label>
+    <input type="text" id="clientName" name="clientName" required>
 
-    <label for="projectGroup">Project Group:</label>
-    <input type="text" id="projectGroup" name="projectGroup" required>
+    <label for="clientGroup">Client Group:</label>
+    <input type="text" id="clientGroup" name="clientGroup" required>
 
     <label for="emailGroup">Email ID:</label>
     <input type="text" id="emailGroup" name="emailGroup" required>
