Location Parameter Added

--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -58,6 +58,9 @@
     <label for="managerName">Manager Name:</label>
     <input type="text" id="managerName" name="managerName" required>
 
+    <label for="location">Location Name:</label>
+    <input type="text" id="location" name="location" required>
+
     <input type="submit" value="Submit">
     <input type="submit" value="Next Page" onclick="window.location='/api/env-id-details/env_id_details'">
 </form>
