--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -29,8 +29,9 @@
     <th>Client Id</th>
     <th>Client Name</th>
     <th>Client Group</th>
-    <th>Email Group</th>
     <th>Manager</th>
+    <th>Email Group</th>
+    <th>Location</th>
   </tr>
   </thead>
   <tbody>
@@ -38,8 +39,9 @@
     <td th:text="${detail.clientId}"></td>
     <td th:text="${detail.clientName}"></td>
     <td th:text="${detail.clientGroup}"></td>
-    <td th:text="${detail.emailGroup}"></td>
     <td th:text="${detail.managerName}"></td>
+    <td th:text="${detail.emailGroup}"></td>
+    <td th:text="${detail.location}"></td>
   </tr>
   </tbody>
 </table>
