--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Company Account Submission Form</title>
+    <title>Client Account Submission Form</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -43,7 +43,7 @@
     </style>
 </head>
 <body>
-<h1>Create a New Account</h1>
+<h1>Create a New Client Account</h1>
 
 <form action="/api/env-id-details" method="post">
     <label for="clientName">Client Name:</label>
