--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title>Environment ID Details</title>
+  <title>Client Details</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
   <!-- Optional CSS -->
   <style>
@@ -22,7 +22,7 @@
 <body>
 <a th:href="@{/api/env-id-details/new}" class="button highlight">Add New Account Details</a>
 
-<h1>Environment ID Details</h1>
+<h1>Client Details</h1>
 <table border="1">
   <thead>
   <tr>
